--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
 </head>
 
 <body>
-    <div class="container">
-        <main>
-            <header>
-                <img src="./images/logo.svg" alt="" class="logo">
-            </header>
-            <section class="section section__row ">
-                <img src="./images/illustration-mockups.svg" alt="illustration mockups" class="illus">
-                <div class="content">
-                    <h1>Build The Community Your Fans Will Love</h1>
-                    <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-                        Create
-                        connections with your users as you engage in genuine discussion.</p>
-                    <button> Register</button>
-                </div>
-            </section>
 
-        </main>
-        <footer class="footer footer__row">
-            <div class="icons">
-                <a href="#" aria-label="Link to our facebook page"><i class="fa-brands fa-facebook-f"></i></a>
-                <a href="#" aria-label="Link to our twitter handle"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#" aria-label="Link to our instagram page"><i class="fa-brands fa-instagram"></i></a>
-
+    <main>
+        <header>
+            <img src="./images/logo.svg" alt="" class="logo">
+        </header>
+        <section class="section section__row ">
+            <img src="./images/illustration-mockups.svg" alt="illustration mockups" class="illus">
+            <div class="content">
+                <h1>Build The Community Your Fans Will Love</h1>
+                <p> Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+                    Create
+                    connections with your users as you engage in genuine discussion.</p>
+                <a href="#" aria-label="Click here to Register and join Us"><button> Register</button></a>
             </div>
-        </footer>
-    </div>
+        </section>
+
+    </main>
+    <footer class="footer footer__row">
+        <div class="icons">
+            <a href="#" aria-label="Link to our facebook page"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" aria-label="Link to our twitter handle"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" aria-label="Link to our instagram page"><i class="fa-brands fa-instagram"></i></a>
+
+        </div>
+    </footer>
+
 </body>
 
 </html>
